--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,9 @@
-RUNNING<!DOCTYPE html>
+<!DOCTYPE html>
 <!-- DONT FORGET TO ADD YOUR ANGULAR APP! -->
 <html ng-app = 'app'>
   <head>
     <meta charset="utf-8">
-    <title>Discussion Board</title>
+    <title>Bucket List</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
@@ -19,12 +19,7 @@ RUNNING<!DOCTYPE html>
 
     <script>
 
-    /*
-        This is the monolithic JavaScript that you should be modularizing.
-        The whole project has 5 problems in it, that when rectified will allow the project to run.
-        Feel free to improve upon code quality, readability, and comments.
-      */
-    /* our angular app modularize, with config */
+    
     var app = angular.module('app', ['ngRoute', 'ngCookies']);
     /* configuration for angular route */
     app.config(function($routeProvider) {
@@ -33,14 +28,14 @@ RUNNING<!DOCTYPE html>
           templateUrl: '/partials/login.html',
           controller: 'usersController'
         })
-        // .when('/dashboard', {
-        //   templateUrl: '/partials/dashboard.html',
-        //   controller: 'topicsController',
-        // })
-        // .when('/topic/:id', {
-        //   templateUrl: '/partials/topic.html',
-        //   controller: 'showTopicsController',
-        // })
+        .when('/dashboard', {
+          templateUrl: '/partials/dashboard.html',
+          controller: 'itemsController',
+        })
+        .when('/user/:id', {
+          templateUrl: '/partials/user.html',
+          controller: 'showUsersController',
+        })
         // .when('/user/:id', {
         //   templateUrl: '/partials/user.html',
         //   controller: 'usersController',
@@ -56,19 +51,18 @@ RUNNING<!DOCTYPE html>
 
 
     <script type="text/javascript" src="/assets/factories/userFactory.js"></script>
-    <!-- <script type="text/javascript" src="/assets/factories/topicFactory.js"></script> -->
+    <script type="text/javascript" src="/assets/factories/itemFactory.js"></script>
     <!-- <script type="text/javascript" src="/assets/factories/dashboardFactory.js"></script> -->
     <script type="text/javascript" src="/assets/controllers/usersController.js"></script>
-    <!-- <script type="text/javascript" src="/assets/controllers/topicsController.js"></script> -->
-    <!-- <script type="text/javascript" src="/assets/controllers/showTopicsController.js"></script> -->
+    <script type="text/javascript" src="/assets/controllers/itemsController.js"></script>
+    <script type="text/javascript" src="/assets/controllers/showUsersController.js"></script>
 
 
 
 
   </head>
   <body>
-    <!-- Links to your new and edit pages here.  Review Angular Partials if you've forgotten ) -->
-    <!-- not so subtle hint: ng-view ??? -->
+    
     <div ng-app='app'>
 
         <div ng-view="">
